--- a/Education-Bootstrap-Website-Template/classes-2-columns.html
+++ b/Education-Bootstrap-Website-Template/classes-2-columns.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>EducationPress - The Most Complete Education Solution</title>
+<title>Actecal Private Limited - The Most Complete Education Solution</title>
 
 
 <!--[if lt IE 9]>
@@ -46,8 +46,8 @@
 </ul>
 <nav class="meta-login">
 <ul>
-<li class="clock"><i class="lnr lnr-clock"></i>Mon - Fri : 8:00 - 12:00</li>
-<li class="call"><i class="lnr lnr-smartphone"></i>Call Us +731 234 5678</li>
+<li class="clock"><i class="lnr lnr-clock"></i>Mon - Fri : 8:00 - 8:00</li>
+<li class="call"><i class="lnr lnr-smartphone"></i>Call Us +918279679408 , +919634333997</li>
 <li><a href="classes-2-columns.html#login-form" class="fancybox">Login</a></li>
 <li><a href="classes-2-columns.html#register-form" class="fancybox">Signup</a></li>
 </ul>
@@ -86,10 +86,12 @@ Home <span class="caret"></span></a>
 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="classes-2-columns.html#">
 Classes <span class="caret"></span></a>
 <ul class="dropdown-menu" role="menu">
-<li><a href="classes-2-columns.html">Classes 2 Columns List</a></li>
-<li><a href="classes-3-columns.html">Classes 3 Columns List</a></li>
+<li><a href="classes-2-columns.html">Class 1 to 3</a></li>
+<li><a href="classes-2-columns.html">Class 4 to 6</a></li>
+<li><a href="classes-2-columns.html">Class 7 to 10</a></li>
+<li><a href="classes-3-columns.html">Class 11 and above</a></li>
 <li><a href="classes-details.html">Classes Detail</a></li>
-<li><a href="classes-video-details.html">Classes Detail With Video</a></li>
+
 </ul>
 </li>
 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="classes-2-columns.html#">
