--- a/Education-Bootstrap-Website-Template/contactus.html
+++ b/Education-Bootstrap-Website-Template/contactus.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>EducationPress - The Most Complete Education Solution</title>
+<title>Actecal Private Limited - The Most Complete Education Solution</title>
 
 
 <!--[if lt IE 9]>
@@ -46,8 +46,8 @@
 </ul>
 <nav class="meta-login">
 <ul>
-<li class="clock"><i class="lnr lnr-clock"></i>Mon - Fri : 8:00 - 12:00</li>
-<li class="call"><i class="lnr lnr-smartphone"></i>Call Us +731 234 5678</li>
+<li class="clock"><i class="lnr lnr-clock"></i>Mon - Fri : 8:00 - 8:00</li>
+<li class="call"><i class="lnr lnr-smartphone"></i>Call Us + 8279679408</li>
 <li><a href="contactus.html#login-form" class="fancybox">Login</a></li>
 <li><a href="contactus.html#register-form" class="fancybox">Signup</a></li>
 </ul>
@@ -60,7 +60,7 @@
 <div class="container">
 <div class="row">
 
-<div class="site-branding col-xs-12 col-sm-3"> <a href="contactus.html#"><img alt="educationpress" class="brand" src="images/logo5.png" /></a> </div>
+<div class="site-branding col-xs-12 col-sm-3"> <img src="1.jpg" alt=""></div>
 
 
 <nav class="main-navigation navbar navbar-default" id="site-navigation">
@@ -170,22 +170,20 @@ Shop <span class="caret"></span></a>
 
 <div class="col-xs-12 col-sm-6 contact-info">
 <div class="col-xs-12 col-sm-6">
-<h3 class="head-border-default">Education Press</h3>
-<p class="address"><i class="fa fa-map-marker"></i>2036 Thunder Road CA 94612
-Oakland, opp. of geon tower
-Pincode - 580089</p>
-<p class="email"><i class="lnr lnr-envelope"></i><a href="https://websitedownloader.io/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f39a9d959cb39697869092879a9c9d8381968080dd909c9e">[email&#160;protected]</a></p>
+<h3 class="head-border-default">Acetecal Private Limited</h3>
+<p class="address"><i class="fa fa-map-marker"></i>Chaughanpata , Mall road ,Almora</p>
+<p class="email"><i class="lnr lnr-envelope"></i><a href="https://websitedownloader.io/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f39a9d959cb39697869092879a9c9d8381968080dd909c9e">[sonam@actecal.com]</a></p>
 <ul class="social-icons">
-<li><a href="contactus.html#"><i class="fa fa-facebook"></i></a></li>
+<li><a href="https://www.facebook.com/Actecal/?show_switched_toast=0&show_invite_to_follow=0&show_switched_tooltip=0&show_podcast_settings=0&show_community_transition=0&show_community_review_changes=0&show_follower_visibility_disclosure=0"><i class="fa fa-facebook"></i></a></li>
 <li><a href="contactus.html#"><i class="fa fa-google-plus"></i></a></li>
 <li><a href="contactus.html#"><i class="fa fa-twitter"></i></a></li>
 <li><a href="contactus.html#"><i class="fa fa-linkedin"></i></a></li>
+<li><a href="https://www.youtube.com/watch?v=QxU0qSrHs4c"><i class="fa fa-youtube-play"></i></a></li>
 </ul>
 </div>
 <div class="col-xs-12 col-sm-6">
 <h3 class="head-border-default">Customer Supprt</h3>
-<p class="phone"><i class="fa fa-phone"></i>731-234-5678</p>
-<p class="email"><i class="lnr lnr-envelope"></i><a href="https://websitedownloader.io/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c2b1b7b2b2adb0b682a7a6b7a1b6abadacb2b0a7b1b1">[email&#160;protected]</a>,com</p>
+<p class="phone"><i class="fa fa-phone"></i> 8279679408 ,9634333997</p>
 </div>
 <div class="col-xs-12 col-sm-12 have-question">
 <h3>Have Any Question?</h3>
