--- a/Education-Bootstrap-Website-Template/contactus.html
+++ b/Education-Bootstrap-Website-Template/contactus.html
@@ -60,7 +60,7 @@
 <div class="container">
 <div class="row">
 
-<div class="site-branding col-xs-12 col-sm-3"> <img src="1.jpg" alt=""></div>
+<div class="site-branding col-xs-12 col-sm-3"> <img src="images/1.jpg" alt=""></div>
 
 
 <nav class="main-navigation navbar navbar-default" id="site-navigation">
@@ -74,14 +74,8 @@
 </div>
 <div class="collapse navbar-collapse navbar-ex1-collapse">
 <ul class="nav navbar-nav">
-<li class="dropdown">
-<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="contactus.html#">
-Home <span class="caret"></span></a>
-<ul class=" dropdown-menu" role="menu">
-<li><a href="home-1.html">Home Page 1</a></li>
-<li><a href="home-2.html">Home Page 2</a></li>
-</ul>
-</li>
+  <ul class="navbar-nav">
+    <li><a href="home.html">Home</a></li>
 <li class="dropdown">
 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="contactus.html#">
 Classes <span class="caret"></span></a>
