--- a/Education-Bootstrap-Website-Template/classes-2-columns.html
+++ b/Education-Bootstrap-Website-Template/classes-2-columns.html
@@ -74,14 +74,8 @@
 </div>
 <div class="collapse navbar-collapse navbar-ex1-collapse">
 <ul class="nav navbar-nav">
-<li class="dropdown">
-<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="classes-2-columns.html#">
-Home <span class="caret"></span></a>
-<ul class=" dropdown-menu" role="menu">
-<li><a href="home-1.html">Home Page 1</a></li>
-<li><a href="home-2.html">Home Page 2</a></li>
-</ul>
-</li>
+	<ul class="navbar-nav">
+		<li><a href="home.html">Home</a></li>
 <li class="dropdown active">
 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="classes-2-columns.html#">
 Classes <span class="caret"></span></a>
