--- a/Education-Bootstrap-Website-Template/classes-2-columns.html
+++ b/Education-Bootstrap-Website-Template/classes-2-columns.html
@@ -44,6 +44,7 @@
 <li><a href="classes-2-columns.html#"><i class="fa fa-instagram"></i></a></li>
 <li><a href="classes-2-columns.html#"><i class="fa fa-youtube"></i></a></li>
 </ul>
+
 <nav class="meta-login">
 <ul>
 <li class="clock"><i class="lnr lnr-clock"></i>Mon - Fri : 8:00 - 8:00</li>
@@ -60,7 +61,7 @@
 <div class="container">
 <div class="row">
 
-<div class="site-branding col-xs-12 col-sm-3"> <a href="classes-2-columns.html#"><img alt="educationpress" class="brand" src="images/logo5.png" /></a> </div>
+<div class="site-branding col-xs-12 col-sm-3"> <a href="classes-2-columns.html#"><img alt="" class="brand" src="images/1.jpg.jpeg" /></a> </div>
 
 
 <nav class="main-navigation navbar navbar-default" id="site-navigation">
