--- a/Education-Bootstrap-Website-Template/event-detail.html
+++ b/Education-Bootstrap-Website-Template/event-detail.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>EducationPress - The Most Complete Education Solution</title>
+<title>Actecal Private Limited - The Most Complete Education Solution</title>
 
 
 <!--[if lt IE 9]>
@@ -60,7 +60,7 @@
 <div class="container">
 <div class="row">
 
-<div class="site-branding col-xs-12 col-sm-3"> <a href="event-detail.html#"><img alt="educationpress" class="brand" src="images/logo5.png" /></a> </div>
+<div class="site-branding col-xs-12 col-sm-3"> <a href="event-detail.html#"><img alt="" class="brand" src="images/1.jpg.jpeg" /></a> </div>
 
 
 <nav class="main-navigation navbar navbar-default" id="site-navigation">
@@ -125,7 +125,7 @@ Shop <span class="caret"></span></a>
 </ul>
 </li>
 <li><a href="contactus.html">Contact Us</a></li>
-<li class="pull-right"><a title="View your cart" href="shopping-cart.html" class="menu-cart"><i class="lnr lnr-cart"></i> <span>0</span></a></li>
+
 </ul>
 </div>
 </nav>
