--- a/Education-Bootstrap-Website-Template/contactus.html
+++ b/Education-Bootstrap-Website-Template/contactus.html
@@ -80,10 +80,11 @@
 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="contactus.html#">
 Classes <span class="caret"></span></a>
 <ul class="dropdown-menu" role="menu">
-<li><a href="classes-2-columns.html">Classes 2 Columns List</a></li>
-<li><a href="classes-3-columns.html">Classes 3 Columns List</a></li>
-<li><a href="classes-details.html">Classes Detail</a></li>
-<li><a href="classes-video-details.html">Classes Detail With Video</a></li>
+  <li><a href="classes-2-columns.html">Class 1 to 3</a></li>
+  <li><a href="classes-2-columns.html">Class 4 to 6</a></li>
+  <li><a href="classes-2-columns.html">Class 7 to 10</a></li>
+  <li><a href="classes-3-columns.html">Class 11 and above</a></li>
+  <li><a href="classes-details.html">Classes Detail</a></li>
 </ul>
 </li>
 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="contactus.html#">
@@ -93,38 +94,22 @@ Events <span class="caret"></span></a>
 <li><a href="event-detail.html">Event Detail</a></li>
 </ul>
 </li>
-<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="contactus.html#">
-Pages <span class="caret"></span></a>
+
 <ul class="dropdown-menu" role="menu">
 <li><a href="aboutus.html">About Us</a></li>
 
-<li><a href="gallery.html">Gallery</a></li>
-<li><a href="faqs.html">FAQs</a></li>
-<li><a href="shortcodes.html">Shortcodes</a></li>
-<li><a href="pricing-plan.html">Plans and Pricing</a></li>
-<li><a href="404-error.html">404 Error</a></li>
-<li><a href="under-construction.html">Under Construction</a></li>
+
 <li><a href="login.html">Login</a></li>
 <li><a href="register.html">Register</a></li>
 <li><a href="edit-profile.html">Edit Profile</a></li>
 </ul>
 </li>
-<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="contactus.html#">
-Blog <span class="caret"></span></a>
-<ul class="dropdown-menu" role="menu">
-<li><a href="blog.html">Blog Listing</a></li>
-<li><a href="blog-details.html">Blog Detail</a></li>
+
 </ul>
 </li>
-<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="contactus.html#">
-Shop <span class="caret"></span></a>
-<ul class="dropdown-menu" role="menu">
-<li><a href="shopping-cart.html">Shopping Cart</a></li>
-<li><a href="checkout.html">Checkout</a></li>
-</ul>
-</li>
+
 <li class="active"><a href="contactus.html">Contact Us</a></li>
-<li class="pull-right"><a title="View your cart" href="shopping-cart.html" class="menu-cart"><i class="lnr lnr-cart"></i> <span>0</span></a></li>
+
 </ul>
 </div>
 </nav>
