--- a/Education-Bootstrap-Website-Template/classes-video-details.html
+++ b/Education-Bootstrap-Website-Template/classes-video-details.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>EducationPress - The Most Complete Education Solution</title>
+<title>Actecal Private limited</title>
 
 
 <!--[if lt IE 9]>
@@ -46,10 +46,10 @@
 </ul>
 <nav class="meta-login">
 <ul>
-<li class="clock"><i class="lnr lnr-clock"></i>Mon - Fri : 8:00 - 12:00</li>
-<li class="call"><i class="lnr lnr-smartphone"></i>Call Us +731 234 5678</li>
-<li><a href="classes-video-details.html#login-form" class="fancybox">Login</a></li>
-<li><a href="classes-video-details.html#register-form" class="fancybox">Signup</a></li>
+<li class="clock"><i class="lnr lnr-clock"></i>Mon - Fri : 8:00 - 8:00</li>
+<li class="call"><i class="lnr lnr-smartphone"></i>Call Us +918279679408 , +919634333997</li>
+<li><a href="login.html" class="fancybox">Login</a></li>
+<li><a href="register.html" class="fancybox">Signup</a></li>
 </ul>
 </nav>
 </div> 
@@ -60,7 +60,7 @@
 <div class="container">
 <div class="row">
 
-<div class="site-branding col-xs-12 col-sm-3"> <a href="classes-video-details.html#"><img alt="educationpress" class="brand" src="images/logo5.png" /></a> </div>
+<div class="site-branding col-xs-12 col-sm-3"> <a href="classes-video-details.html#"><img alt="Actecal" class="brand" src="images/1.jpg.jpeg" /></a> </div>
 
 
 <nav class="main-navigation navbar navbar-default" id="site-navigation">
@@ -78,8 +78,8 @@
 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="classes-video-details.html#">
 Home <span class="caret"></span></a>
 <ul class=" dropdown-menu" role="menu">
-<li><a href="home-1.html">Home Page 1</a></li>
-<li><a href="home-2.html">Home Page 2</a></li>
+<li><a href="home.html">Home Page </a></li>
+
 </ul>
 </li>
 <li class="dropdown active">
@@ -105,11 +105,7 @@ Pages <span class="caret"></span></a>
 <li><a href="aboutus.html">About Us</a></li>
 
 <li><a href="gallery.html">Gallery</a></li>
-<li><a href="faqs.html">FAQs</a></li>
-<li><a href="shortcodes.html">Shortcodes</a></li>
 <li><a href="pricing-plan.html">Plans and Pricing</a></li>
-<li><a href="404-error.html">404 Error</a></li>
-<li><a href="under-construction.html">Under Construction</a></li>
 <li><a href="login.html">Login</a></li>
 <li><a href="register.html">Register</a></li>
 <li><a href="edit-profile.html">Edit Profile</a></li>
@@ -125,12 +121,9 @@ Blog <span class="caret"></span></a>
 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="classes-video-details.html#">
 Shop <span class="caret"></span></a>
 <ul class="dropdown-menu" role="menu">
-<li><a href="shopping-cart.html">Shopping Cart</a></li>
-<li><a href="checkout.html">Checkout</a></li>
-</ul>
+\</ul>
 </li>
 <li><a href="contactus.html">Contact Us</a></li>
-<li class="pull-right"><a title="View your cart" href="shopping-cart.html" class="menu-cart"><i class="lnr lnr-cart"></i> <span>0</span></a></li>
 </ul>
 </div>
 </nav>
@@ -529,7 +522,7 @@ The instructor was articulate and easy to understand. Highly recommend!</p>
 <footer class="site-footer" id="colophon">
 <div class="container">
 <div class="row">
-<div class="col-xs-12 col-sm-4"><img src="images/logo5.png" alt="" /></div>
+<div class="col-xs-12 col-sm-4"><img src="images/1.jpg.jpeg" alt="" /></div>
 </div>
 <div class="row">
 <div class="col-xs-12 col-sm-4 footer-widget">
