--- a/Education-Bootstrap-Website-Template/register.html
+++ b/Education-Bootstrap-Website-Template/register.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>EducationPress - The Most Complete Education Solution</title>
+<title>Actecal - The Most Complete Education Solution</title>
 
 
 <!--[if lt IE 9]>
@@ -37,19 +37,19 @@
 <div class="container">
 <div class="row">
 <ul class="social">
-<li><a href="register.html#"><i class="fa fa-twitter"></i></a></li>
-<li><a href="register.html#"><i class="fa fa-facebook-square"></i></a></li>
-<li><a href="register.html#"><i class="fa fa-linkedin-square"></i></a></li>
-<li><a href="register.html#"><i class="fa fa-pinterest"></i></a></li>
-<li><a href="register.html#"><i class="fa fa-instagram"></i></a></li>
-<li><a href="register.html#"><i class="fa fa-youtube"></i></a></li>
+<li><a href="register.html"><i class="fa fa-twitter"></i></a></li>
+<li><a href="register.html"><i class="fa fa-facebook-square"></i></a></li>
+<li><a href="register.html"><i class="fa fa-linkedin-square"></i></a></li>
+<li><a href="register.html"><i class="fa fa-pinterest"></i></a></li>
+<li><a href="register.html"><i class="fa fa-instagram"></i></a></li>
+<li><a href="register.html"><i class="fa fa-youtube"></i></a></li>
 </ul>
 <nav class="meta-login">
 <ul>
-<li class="clock"><i class="lnr lnr-clock"></i>Mon - Fri : 8:00 - 12:00</li>
-<li class="call"><i class="lnr lnr-smartphone"></i>Call Us +731 234 5678</li>
-<li><a href="register.html#login-form" class="fancybox">Login</a></li>
-<li><a href="register.html#register-form" class="fancybox">Signup</a></li>
+<li class="clock"><i class="lnr lnr-clock"></i>Mon - Fri : 8:00 - 8:00</li>
+<li class="call"><i class="lnr lnr-smartphone"></i>Call Us- +918279679408 , +919634333997</li>
+<li><a href="login.html" class="fancybox">Login</a></li>
+<li><a href="register.html" class="fancybox">Signup</a></li>
 </ul>
 </nav>
 </div> 
@@ -60,7 +60,7 @@
 <div class="container">
 <div class="row">
 
-<div class="site-branding col-xs-12 col-sm-3"> <a href="register.html#"><img alt="educationpress" class="brand" src="images/logo5.png" /></a> </div>
+<div class="site-branding col-xs-12 col-sm-3"> <a href="register.html#"><img alt="Actecal" class="brand" src="images/1.jpg.jpeg" /></a> </div>
 
 
 <nav class="main-navigation navbar navbar-default" id="site-navigation">
@@ -74,22 +74,19 @@
 </div>
 <div class="collapse navbar-collapse navbar-ex1-collapse">
 <ul class="nav navbar-nav">
-<li class="dropdown">
-<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="register.html#">
-Home <span class="caret"></span></a>
-<ul class=" dropdown-menu" role="menu">
-<li><a href="home-1.html">Home Page 1</a></li>
-<li><a href="home-2.html">Home Page 2</a></li>
-</ul>
-</li>
-<li class="dropdown">
-<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="register.html#">
-Classes <span class="caret"></span></a>
-<ul class="dropdown-menu" role="menu">
-<li><a href="classes-2-columns.html">Classes 2 Columns List</a></li>
-<li><a href="classes-3-columns.html">Classes 3 Columns List</a></li>
-<li><a href="classes-details.html">Classes Detail</a></li>
-<li><a href="classes-video-details.html">Classes Detail With Video</a></li>
+  <ul class="navbar-nav">
+    <li><a href="home.html">Home</a></li>
+
+    <li class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+        aria-expanded="false" href="home.html#">
+        Classes <span class="caret"></span></a>
+      <ul class="dropdown-menu" role="menu">
+        <li><a href="classes-2-columns.html">Class 1 to 3</a></li>
+        <li><a href="classes-2-columns.html">Class 4 to 6</a></li>
+        <li><a href="classes-2-columns.html">Class 7 to 10</a></li>
+        <li><a href="classes-3-columns.html">Class 11 and above</a></li>
+        <li><a href="classes-details.html">Classes Detail</a></li>
 </ul>
 </li>
 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="register.html#">
@@ -122,11 +119,7 @@ Blog <span class="caret"></span></a>
 <li><a href="blog-details.html">Blog Detail</a></li>
 </ul>
 </li>
-<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="register.html#">
-Shop <span class="caret"></span></a>
-<ul class="dropdown-menu" role="menu">
-<li><a href="shopping-cart.html">Shopping Cart</a></li>
-<li><a href="checkout.html">Checkout</a></li>
+
 </ul>
 </li>
 <li><a href="contactus.html">Contact Us</a></li>
@@ -177,8 +170,8 @@ Shop <span class="caret"></span></a>
 <div class="row">
 <div class="col-xs-12">
 <div class="col-xs-12 col-sm-8">
-<h3>Remaining essentially unchanged.</h3>
-<p>When an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+<h3></h3>
+
 </div>
 <a href="register.html#" class="btn btn-medium btn-default pull-right">Know More <i class="lnr lnr-arrow-right"></i></a>
 </div>
@@ -188,7 +181,7 @@ Shop <span class="caret"></span></a>
 <footer class="site-footer" id="colophon">
 <div class="container">
 <div class="row">
-<div class="col-xs-12 col-sm-4"><img src="images/logo5.png" alt="" /></div>
+<div class="col-xs-12 col-sm-4"><img src="images/1.jpg.jpeg" alt="" /></div>
 </div>
 <div class="row">
 <div class="col-xs-12 col-sm-4 footer-widget">
@@ -212,15 +205,14 @@ The point of using Lorem Ipsum is that it has a more or less normal distribution
 <div class="col-xs-12 col-sm-4 footer-widget">
 <aside class="widget widget_nav_menu">
 <ul class="menu">
-<li><a href="register.html#">Home</a></li>
-<li><a href="register.html#">Shortcodes</a></li>
-<li><a href="register.html#">about US</a></li>
-<li><a href="register.html#">Blog</a></li>
-<li><a href="register.html#">classes</a></li>
-<li><a href="register.html#">Contact US</a></li>
-<li><a href="register.html#">Teachers</a></li>
-<li><a href="register.html#">Privacy Policy</a></li>
-<li><a href="register.html#">Events</a></li>
+<li><a href="home.html">Home</a></li>
+<li><a href="shortcodes.html">Shortcodes</a></li>
+<li><a href="aboutus.html">about US</a></li>
+<li><a href="blog.html">Blog</a></li>
+<li><a href="classes-details.html">classes</a></li>
+<li><a href="contactus.html">Contact US</a></li>
+<li><a href="">Privacy Policy</a></li>
+<li><a href="events.html">Events</a></li>
 </ul>
 </aside>
 </div>
@@ -242,7 +234,7 @@ The point of using Lorem Ipsum is that it has a more or less normal distribution
 <div class="row">
 <div class="copyright">
 
-<p class="develop col-xs-12 col-sm-4 text-right"><a target="_blank" href="https://www.templateshub.net">Templates Hub</a> </p>
+
 </div>
 </div>
 </div>
